--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -10,7 +10,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Menu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,10 +53,10 @@
         </div>
 
         <div class="container d-flex justify-content-center">
-            <div class="col-md-3 w-50 p-3 gal"><img src="images/gallery4.jpg" class="rounded mx-auto d-block" alt=""></div>
-            <div class="col-md-3 w-50 p-3 gal"><img src="images/gallery4.jpg" class="rounded mx-auto d-block" alt=""></div>
-            <div class="col-md-3 w-50 p-3 gal"><img src="images/gallery4.jpg" class="rounded mx-auto d-block" alt=""></div>
-            <div class="col-md-3 w-50 p-3 gal"><img src="images/gallery4.jpg" class="rounded mx-auto d-block" alt=""></div>
+            <div class="col-md-3 "><img src="images/gallery4.jpg" height="250" width="250" class="rounded mx-auto d-block" alt=""></div>
+            <div class="col-md-3 "><img src="images/gallery4.jpg" height="250" width="250" class="rounded mx-auto d-block" alt=""></div>
+            <div class="col-md-3 "><img src="images/gallery4.jpg" height="250" width="250" class="rounded mx-auto d-block" alt=""></div>
+            <div class="col-md-3 "><img src="images/gallery4.jpg" height="250" width="250" class="rounded mx-auto d-block" alt=""></div>
 
         </div>
     </section>
